# hmsf-md

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  tsconfig.json  vitest.config.mts  vitest.setup.mts
.github/workflows/: main.yml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  edit_dot_env  init-unix.sql  settings_local.py
docs/: conf.py  etl-modules.md  extensions.md  guides.md  index.rst  map-layers.md  permissions.md  search-filter.md
docs/_templates/: layout.html
fpan/: admin.py  apps.py  celery.py  context_processors.py  decorators.py  hosts.py  load.py  models.py  package.json  settings.py  signals.py  tasks.py  urls.py  utils.py  views.py  wsgi.py
fpan/account/: forms.py  tokens.py  views.py
fpan/data/: county_lookup.json
fpan/datatypes/: management_area.py  scout_datatype.py  username.py
fpan/etl_modules/: fmsf_importer.py  management_area_importer.py  utils.py
fpan/fixtures/: 1919-coastal-map.json  agencies.json  fpan_region.dbf  fpan_region.shp  fpan_region.shx  fpan_regions_0.geojson  fpan_regions_1.geojson  fpan_regions_2.geojson  fpan_regions_3.geojson  fpan_regions_4.geojson  fpan_regions_5.geojson  fpan_regions_6.geojson  fpan_regions_7.geojson  managedareas1.json  managedareas2.json  managedareas3.json  management_area_types.json  region_wkts.csv  regions.json  slr1-layer.json  slr10-layer.json  slr2-layer.json  slr3-layer.json  slr6-layer.json  storm-surge-layer.json  watermanagementdistricts.json
fpan/functions/: instance_permissions_update.py  sample_function.py  scout_assignment.py  spatial_join.py
fpan/migrations/: 0001_initial.py  0002_managedarea.py  0002_scout_state.py  0003_auto_20171127_1200.py  0004_auto_20171127_1259.py  0005_auto_20171201_1646.py  0006_managedarea_nickname.py  0007_managedarea_sp_district.py  0008_alter_state_park_category_value.py  0009_alter_ma_for_wmd.py  0009_load_managedarea_fixtures.py  0010_load_managedarea_fixtures.py  0010_load_region_fixtures.py  0011_load_region_fixtures.py  0012_load_wmd_fixtures.py  0013_add_districts_to_managed_areas.py  (+6 more)
hms/: admin.py  apps.py  context_processors.py  fmsf.py  forms.py  models.py  permissions_backend.py  signals.py  urls.py  utils.py  views.py
legacy/: README.md  legacy_utils.py
reporting/: utils.py
scripts/: build_docs.sh  celery_dev.sh  es_init_dev.sh  postgis_dev.sh  postgis_init_dev.sh  restore_db_from_backup.sh  setup_hms.sh
site_theme/: admin.py  apps.py  context_processors.py  models.py  urls.py
tests/: base_test.py  settings_test.py  test_accounts.py  test_fmsf_update.py  test_package_loading.py  test_suite.py
(+368 files in other folders)
