[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmsf-md"
version = "0.1.0"
description = "Arches implementation for the Heritage Monitoring Scouts program by the Florida Public Archaeology Network."
readme = "README.md"
requires-python = ">=3.8,<3.9"

dependencies = [
    "pygments==2.20.0",
    "django-grappelli==2.15.5",
    "django-tinymce==4.1.0",
    "django-storages==1.13",
    "boto3==1.24",
    "setuptools<=80.9.0",
    "arches",
    "arches_extensions",
]

[project.optional-dependencies]
prod = [
    "mod-wsgi==4.9.4",
]

[dependency-groups]
dev = [
    "coverage<=7.13.1",
    "django-docs==0.3.3",
    "sphinx==7.1.2",
    "myst-parser==2.0.0",
    "sphinx-material==0.0.36",
]

[tool.setuptools]
packages = [
    "fpan"
]

[tool.uv.sources]
arches = { path = "../arches", editable = true }
arches_extensions = { path = "../arches-extensions", editable = true }
