[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmsf-md"
version = "0.1.0"
description = "Arches implementation for the Heritage Monitoring Scouts program by the Florida Public Archaeology Network."
readme = "README.md"
license = {text = "GNU AGPL3"}
requires-python = ">=3.10,<3.13"

dependencies = [
    "pygments==2.15.0",
    "django-grappelli==2.15.5",
    "django-tinymce==4.1.0",
    "django-storages==1.13",
    "boto3==1.24",
    "setuptools<=80.9.0",
    "arches",
    "arches_extensions",
]

[project.optional-dependencies]


[dependency-groups]
dev = [
    "coverage<=7.13.1",
    "django-docs==0.3.3",
    "sphinx==7.1.2",
    "myst-parser==2.0.0",
    "sphinx-material==0.0.36",
    "livereload",
    "sst",
    "coverage",
    "django-silk==5.1.0",
    "pre-commit==3.8.0",
    "black==24.4.2",
]

[tool.setuptools]
packages = [
    "fpan"
]

[tool.uv.sources]
arches = { path = "../arches", editable = true }
arches_extensions = { path = "../arches-extensions", editable = true }
